fix: improve visibility of the **Blog** page (#1308)
Make `BlogPostItem`'s title and description more visible in dark mode.

fix #1308

--- a/blog/src/css/customTheme.scss
+++ b/blog/src/css/customTheme.scss
@@ -141,7 +141,7 @@ div.inner {
 }
 
 header h2 {
-  color: var(--color-primary);
+  color: var(--color-title);
 }
 
 @media only screen and (max-width: 414px) {
