--- a/blog/src/theme/BlogPosts/style.module.scss
+++ b/blog/src/theme/BlogPosts/style.module.scss
@@ -125,7 +125,6 @@
         h2 {
           font-size: 1.375rem;
           line-height: 1.2em;
-          color: #222;
           margin-top: 0.8rem;
           margin-bottom: 0.5em;
           transition: all 0.3s ease-in-out;
@@ -136,7 +135,6 @@
         }
 
         p {
-          color: #1d1d1f;
           max-height: #{1.7 * 3}em;
           overflow-y: hidden;
           text-overflow: ellipsis;
